Changelog
=========

2.0RC1 (unreleased)
-------------------

- Import Owned from OFS.owner to avoid deprecation warnings.
  [timo]
  
- Disable discussion by default.
  [timo]
  
- Enable ajaxify comment deletion again ([thomasdesvenain]). This has been 
  disabled in 1.0b12 because of problems with Plone 3.
  [timo]
  
- Remove collective.autopermission dependency that has become unnecessary in
  Plone 4.1.
  [timo]

1.0RC1 (unreleased)
-------------------

- Always show existing comments, even if commenting is disabled. 
  [timo]
  
- Fix CSS for commenter images with a width of more than 2.5em. This fixes 
  http://dev.plone.org/plone/ticket/11391.
  [timo]

- Show a 'Comments are moderated.' message next to the comment form if comments
  are moderated. 
  [timo]
  
- Make sure plone.app.registry's ZCML is loaded, so that its import step will run
  when plone.app.discussion is installed.
  [davisagli]

- Avoid sending multiple notification emails to the same person when
  he has commented multiple times.
  [maurits]
  
- Move discussion action item from actionicons.xml to actions.xml to avoid 
  deprecation warning.
  [timo]
  
- Fix cancel button on edit view when using Dexterity types. This fixes 
  http://dev.plone.org/plone/ticket/11338.
  [EpeliJYU]
  
- Assigning the 'Reply to item' permission to the 'Authenticated' role. The old
  commenting system allowed 'Authenticated' users to post comments. Also, OpenID
  users do not possess the 'Authenticated' role.
  [timo]

- Make sure the handleComment method checks for the 'Reply to item' permission 
  when adding a comment.
  [timo]

- Make the mail-setting warning message show up in the discussion control panel.
  [timo]
  
- Link directly to the "Discussion Item" types control panel in the moderation
  view.
  [timo]

- Show "moderate comments" link in the admin panel only if a moderation 
  workflow is enabled for comments.
  [timo]
